# python_service_template

./: Dockerfile  README.md  pyproject.toml
mypackage/: __init__.py  hello_world.py  version.py
