[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mypackage"
description = "Python service template"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.10"
]
dependencies = []
requires-python = ">=3.10,<3.11"
dynamic = ["version"]

[project.scripts]
mypackage = "mypackage.hello_world:say_hi"

[tool.setuptools.packages]
find = {}

[tool.setuptools.dynamic]
version = {attr = "mypackage.__version__"}
